<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Activity.CreateTransactionActivity"
    tools:ignore="HardcodedText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_transaction"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="id"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/et_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="tanggal"
        android:hint="@string/tanggal" />

    <EditText
        android:id="@+id/et_waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="waktu"
        android:hint="@string/waktu" />

    <Spinner
        android:id="@+id/spinner_shift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_shift" />

    <EditText
        android:id="@+id/et_id_pengguna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="id_pengguna"
        android:hint="@string/id_pengguna" />

    <EditText
        android:id="@+id/et_id_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="id_pelanggan"
        android:hint="@string/id_pelanggan" />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_status" />

    <EditText
        android:id="@+id/et_nama_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="nama_pelanggan"
        android:hint="@string/nama_pelanggan" />

    <EditText
        android:id="@+id/et_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="total"
        android:hint="@string/total" />

    <Spinner
        android:id="@+id/spinner_metode_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_metode_pembayaran" />

    <EditText
        android:id="@+id/et_total_diskon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="total_diskon"
        android:hint="@string/total_diskon" />

    <Spinner
        android:id="@+id/spinner_id_promosi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_id_promosi" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/simpan" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Content here -->
    </ScrollView>

</LinearLayout>
